#288 Fix scrolling on iphone - Add the script that replaces the height property in vh per px only mobile device. Also added a new class for better use and fix ui bugs on small mobile

--- a/_assets/css/media/_small_mobile.scss
+++ b/_assets/css/media/_small_mobile.scss
@@ -1,4 +1,27 @@
 @media screen and ($b_small_mobile_height) {
+  .section {
+    padding: 20px 0;
+  }
+  .main-screen {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .uses-cases {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .uses-cases-box {
+    padding-top: 0;
+  }
+  .uses-cases-box__text {
+    margin-bottom: 15px;
+  }
+  .uses-cases-slideshow .slick-arrow {
+    bottom: 20px;
+  }
+  .post-slideshow__link {
+    height: 200px;
+  }
   .btn-scroll-down {
     bottom: 30px;
   }
@@ -25,5 +48,30 @@
   }
   .wave-wrapper {
     padding-top: 0;
+  }
+  .services .col+.col .holder {
+    padding-top: 30px;
+    padding-bottom: 100px;
+  }
+}
+
+@media screen and (max-width: 359px) {
+  .services .col .holder {
+    padding: 0 15px;
+  }
+  .services .col+.col .holder {
+    padding: 0 15px;
+  }
+  .uses-cases-slideshow .slick-prev {
+    left: 15px;
+  }
+  .uses-cases-slideshow .slick-next {
+    left: 65px;
+  }
+  .services-slideshow-controls {
+    left: 15px;
+  }
+  .main-screen.animation .btn-scroll-down {
+    bottom: 60px;
   }
 }
